apps/cli/test/expected/multiple-parse-errors.out.txt
{
	"fixture": "multiple-parse-errors",
	"command": "siren list"
}
---
valid
---
siren/broken1.siren:1:1: EL003: unexpected token; expected 'task', 'milestone', 'comment', 'document', 'resource_type'…
  |
1 | !!! syntax error
  | ^^^^^^^^^^^^^^^^
siren/broken2.siren:1:1: EL003: unexpected token; expected 'task', 'milestone', 'comment', 'document', 'resource_type'…
  |
1 | @@@ another error
  | ^^^^^^^^^^^^^^^^^
